www: Extract sidebar styles to CSS variables

--- a/www/react-base/index.html
+++ b/www/react-base/index.html
@@ -8,6 +8,21 @@
     <link id="bbicon" href="/icon.png" rel="icon">
     <link href="/icon.svg" title="Buildbot" rel="fluid-icon">
     <title>Buildbot</title>
+    <style id="bb-style">
+      :root {
+        --bb-sidebar-background-color: #30426a;
+        --bb-sidebar-header-background-color: #273759;
+        --bb-sidebar-header-text-color: #fff;
+        --bb-sidebar-footer-background-color: #273759;
+        --bb-sidebar-button-text-color: #b2bfdc;
+        --bb-sidebar-button-hover-background-color: #1b263d;
+        --bb-sidebar-button-hover-text-color: #fff;
+        --bb-sidebar-button-current-background-color: #273759;
+        --bb-sidebar-button-current-text-color: #b2bfdc;
+        --bb-sidebar-stripe-hover-color: #e99d1a;
+        --bb-sidebar-stripe-current-color: #8c5e10;
+      }
+    </style>
   </head>
   <body>
     <div id="outdated"></div>
